Feature/password frequent reuse (#3)
* Fix filename for password_content module.

* Implement core functionality of password_frequent_reuse module.

* Fix previous password check to account for rolling salt.

* Fix previous password check to account for pepper.

* Fix callbacks being called twice on save.

* Implement previous_password purging.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,7 @@ en:
           unknown_characters: "Password contains %{count} invalid %{subject}"
           minimum_characters: "Password must contain at least %{count} %{type} %{subject}"
           maximum_characters: "Password must contain less than %{count} %{type} %{subject}"
+    password_frequent_reuse_prevention:
+      errors:
+        messages:
+          password_is_recent: "Last %{count} passwords may not be reused"
