Feature/password regular update (#5)
* Fix generator template to add missing password_minimum_age config.

* Fix password_content_enforcement to handle empty password strings.

* Fix password_content_enforcement to add errors on attributes instead of base.

* Fix password_content_enforcement locales to not include attribute name.

* Implement core functionality of password_regular_update module.

* Refactor tests and fix to include password_confirmation attribute.

* Prevent collisions between devise and active skip_current_controller? methods.

* Fix frequent_change and frequet_reuse modules to return valid for unchanged User.

If the user object has not changed, where the encrypted password hash is still the same, validation would fail. Devise calls valid? after login but would fail when the dppe validators returned false (a User obj was immediatly invalid after saving unless you changed the password).

* Refactor model tests to better isolate User dppe configs.

Because you cannot remove devise modules after the User class has been loaded, we need to create different Users entirely to isolate tests that depend on different configurations. And all of those classes need to inherit from a base User. But the feature tests need a fully-configured User. So this refactor sticks our different Users into an Isolated module that redefines the User object to a base config.

* Add feature tests.

* Refactor for rubocop.

* Fix for headless feature testing on circleci and Docker.

* Fix for headless feature testing on circleci and Docker. (again)

* Remove travis config.

* Update gemspec for railties version range.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,9 +3,9 @@ en:
     password_content_enforcement:
       errors:
         messages:
-          unknown_characters: "Password contains %{count} invalid %{subject}"
-          minimum_characters: "Password must contain at least %{count} %{type} %{subject}"
-          maximum_characters: "Password must contain less than %{count} %{type} %{subject}"
+          unknown_characters: "contains %{count} invalid %{subject}"
+          minimum_characters: "must contain at least %{count} %{type} %{subject}"
+          maximum_characters: "must contain less than %{count} %{type} %{subject}"
     password_frequent_reuse_prevention:
       errors:
         messages:
@@ -14,6 +14,13 @@ en:
       errors:
         messages:
           password_is_recent: "Password cannot be changed more than once per %{timeframe}"
+    password_regular_update_enforcement:
+      alerts:
+        messages:
+          password_updated: "Your password has been updated."
+      errors:
+        messages:
+          password_expired: "Your password has expired. Passwords must be changed every %{timeframe}"
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
     distance_in_words:
