--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,7 @@ en:
     types:
       uppercase: "uppercase"
       downcase: "downcase"
+      lowercase: "lowercase"
       number: "number"
       special: "special"
 
