--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,11 +22,11 @@ en:
     password_disallows_frequent_reuse:
       errors:
         messages:
-          password_is_recent: "Last %{count} passwords may not be reused"
+          password_is_recent: "must not be reused from the last %{count} passwords."
     password_disallows_frequent_changes:
       errors:
         messages:
-          password_is_recent: "Password cannot be changed more than once per %{timeframe}"
+          password_is_recent: "cannot be changed more than once per %{timeframe}"
     password_requires_regular_updates:
       alerts:
         messages:
